# vantage-ui-examples

./: .dockerignore  .gitignore  .rules  CHANGELOG.md  Cargo.toml  README.md  catalog.yaml
.github/workflows/: bdd-nightly.yaml  bdd-stable.yaml  bdd.yaml  build-example-zips.yaml  deploy-launch-control.yaml
apps/bakery/: README.md
apps/bakery/data/: clients.csv  products.csv
apps/bakery/docs/: overview.md
apps/bakery/inventory/datasource/: bakery.yaml
apps/bakery/inventory/menu/: left.yaml
apps/bakery/inventory/page/: clients.yaml  products.yaml
apps/bakery/inventory/table/: clients.yaml  products.yaml
apps/bakery/tests/: .gitkeep
apps/launch-control/: README.md
apps/launch-control/features/launch-summary-view/: AGENT_SMITH_REQUIREMENTS.md
apps/launch-control/inventory/: application.yaml
apps/launch-control/inventory/action/: new-launch.yaml  submit-launch.yaml
apps/launch-control/inventory/datasource/: local.yaml
apps/launch-control/inventory/menu/: left.yaml
apps/launch-control/inventory/page/: agencies.yaml  astronauts.yaml  landings.yaml  landpads.yaml  launch_crew.yaml  launcher_configurations.yaml  launchers.yaml  launches.yaml  locations.yaml  pads.yaml  payload_flights.yaml  payloads.yaml
apps/launch-control/inventory/table/: agencies.yaml  astronauts.yaml  landings.yaml  landpads.yaml  launch_crew.yaml  launcher_configurations.yaml  launchers.yaml  launches.yaml  locations.yaml  pads.yaml  payload_flights.yaml  payloads.yaml
apps/launch-control/inventory/view/: launch_summary.yaml
apps/launch-control/server/: .gitignore  Cargo.toml  Dockerfile
apps/launch-control/server/fixtures/: astronauts.json  launches_crewed.json  launches_previous.json  launches_upcoming.json  payloads.json
apps/launch-control/server/src/: db.rs  flaky.rs  main.rs  nest.rs  rest.rs  seed.rs  sim.rs
apps/launch-control/server/src/model/: agency.rs  aggregates.rs  astronaut.rs  landing.rs  landpad.rs  launch.rs  launch_crew.rs  launcher.rs  launcher_configuration.rs  location.rs  lookups.rs  mission.rs  mod.rs  orbit.rs  pad.rs  payload.rs  payload_flight.rs
apps/launch-control/server/src/sim/: ascent.rs  countdown.rs  engine.rs  mission.rs  mod.rs  pace.rs  testutil.rs  trigger.rs
apps/launch-control/tests/: data_tools.feature
apps/periscope/: .bdd-skip  README.md
apps/periscope/cluster/: README.md  ingress.sh  start.sh  stop.sh
apps/periscope/cluster/chart/: Chart.yaml  values.yaml
apps/periscope/inventory/: AGENTS.md  application.yaml
apps/periscope/inventory/datasource/: cluster.yaml
apps/periscope/inventory/menu/: left.yaml
apps/periscope/inventory/page/: configmaps.yaml  deployments.yaml  events.yaml  explorer.yaml  infra.yaml  jobs.yaml  namespaces.yaml  nodes.yaml  overview.yaml  pods.yaml  replicasets.yaml  secrets.yaml  services.yaml  usage.yaml
apps/periscope/inventory/table/: configmaps.yaml  deployments.yaml  events.yaml  jobs.yaml  namespaces.yaml  node_metrics.yaml  nodes.yaml  pod_metrics.yaml  pods.yaml  replicasets.yaml  secrets.yaml  services.yaml
apps/periscope/inventory/view/: deployment_summary.yaml  node_summary.yaml  pod_summary.yaml
apps/periscope/tests/: cluster.feature
apps/space-mock/inventory/: application.yaml
apps/space-mock/inventory/datasource/: ll2.yaml  ll2c.yaml
apps/space-mock/inventory/menu/: left.yaml
apps/space-mock/inventory/page/: agencies.yaml  launches.yaml  payload_flights.yaml  payloads.yaml
apps/space-mock/inventory/table/: agencies.yaml  launches.yaml  payload_flights.yaml  payloads.yaml
apps/space-mock/tests/: data_tools.feature
apps/space/inventory/: application.yaml
apps/space/inventory/datasource/: ll2.yaml  ll2_starship.yaml  ll2c.yaml
apps/space/inventory/menu/: left.yaml
apps/space/inventory/page/: agencies.yaml  astronauts.yaml  celestial_bodies.yaml  config_agency_types.yaml  config_astronaut_roles.yaml  config_astronaut_statuses.yaml  config_astronaut_types.yaml  config_celestial_body_types.yaml  config_countries.yaml  config_docking_locations.yaml  config_event_types.yaml  config_first_stage_types.yaml  config_image_licenses.yaml  config_image_variant_types.yaml  config_infourl_types.yaml  config_landing_locations.yaml  config_landing_types.yaml  config_languages.yaml  config_launch_statuses.yaml  config_launcher_statuses.yaml  config_mission_types.yaml  config_net_precisions.yaml  config_notice_types.yaml  config_orbits.yaml  config_payload_types.yaml  config_program_types.yaml  config_road_closure_statuses.yaml  config_space_station_statuses.yaml  config_spacecraft_configuration_types.yaml  config_spacecraft_statuses.yaml  config_timeline_event_types.yaml  config_vidurl_types.yaml  docking_events.yaml  events.yaml  events_previous.yaml  events_upcoming.yaml  expeditions.yaml  landings.yaml  launcher_configuration_families.yaml  launcher_configurations.yaml  (+18 more)
apps/space/inventory/table/: agencies.yaml  astronauts.yaml  celestial_bodies.yaml  config_agency_types.yaml  config_astronaut_roles.yaml  config_astronaut_statuses.yaml  config_astronaut_types.yaml  config_celestial_body_types.yaml  config_countries.yaml  config_docking_locations.yaml  config_event_types.yaml  config_first_stage_types.yaml  config_image_licenses.yaml  config_image_variant_types.yaml  events.yaml  (+43 more)
apps/space/tests/: data_tools.feature
apps/spacex/: README.md
apps/spacex/inventory/: AGENTS.md
apps/vantage-github/: README.md
apps/vantage-github/inventory/: .env.example  AGENTS.md  application.yaml
docs/superpowers/plans/: 2026-06-07-scripted-reference-two-pass-detail.md  2026-06-21-on-demand-launch-sim-p1.md
docs/superpowers/specs/: 2026-06-07-scripted-reference-two-pass-detail-design.md  2026-06-21-on-demand-launch-sim-p1-design.md
scripts/: build-example-zips.sh
test-framework/: Cargo.toml
test-framework/features/common/: startup.feature
test-framework/src/: fake_rest.rs  launch_control.rs  launcher.rs  lib.rs  main.rs  mcp_client.rs  world.rs
test-framework/src/steps/: data_tools.rs  mod.rs  startup.rs
todo/: agent-skill.md  ci-hardening.md  scenario-features.md
(+64 files in other folders)
