[package]
name = "test-framework"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Black-box BDD engine + driver that launches the vantage-ui binary and drives it over MCP"
publish = false

[[bin]]
name = "vantage-ui-test"
path = "src/main.rs"

[lib]
name = "test_framework"
path = "src/lib.rs"

[dependencies]
cucumber = { version = "0.21", default-features = false, features = ["macros"] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "time",
    "net",
    "io-util",
    "sync",
] }
# Pinned to the exact rmcp the vantage-ui server uses, for wire compatibility.
rmcp = { version = "=1.7.0", default-features = false, features = [
    "client",
    "transport-streamable-http-client-reqwest",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
