[package]
name = "launch-control-server"
version = "0.1.0"
edition = "2024"
publish = false
description = "Self-hosted, deliberately-flaky Launch Library 2 demo server for the launch-control vantage-ui example"

[features]
# Exactly one backend is compiled in. Default is SQLite (zero-setup local dev);
# `--no-default-features --features pg` is PostgreSQL-only — it pulls neither the
# SQLite vantage backend nor libsqlite3-sys, keeping the Lambda binary lean. See
# `src/db.rs` (the `Db` alias) and each model's cfg-gated `#[entity]` marker.
default = ["sqlite"]
sqlite = ["vantage-sql/sqlite", "sqlx/sqlite"]
pg = ["vantage-sql/postgres", "sqlx/postgres"]
# Run as a native AWS Lambda (the Runtime API, via lambda_http) instead of a TCP
# server — no Lambda Web Adapter. The deployed image is built with this; local
# dev omits it and keeps the plain axum listener. See the `Serve` arm in main.rs.
lambda = ["dep:lambda_http"]

[dependencies]
# Vantage data layer (crates.io 0.6.x — no patch; this example ships against published crates).
vantage-core = "0.6"
vantage-types = "0.6"
# 0.6.9 carries `Table::with_text_id` (text-keyed id columns on PostgreSQL).
vantage-table = "0.6.9"
vantage-dataset = "0.6"
vantage-expressions = "0.6"
# The SQL backend is selected by the `sqlite`/`pg` features above (each enables
# the matching vantage-sql backend), so a non-default build compiles only one.
# 0.6.6 builds sqlx with TLS so the Postgres pool can reach an SSL-enforcing
# server (e.g. RDS `rds.force_ssl=1`); also binds text ids correctly + adds the
# Postgres Vista window fetch.
vantage-sql = { version = "0.6.6", default-features = false, features = ["vista"] }
# REST routes are exposed through the Vista facade (the same surface the
# api-client UI talks to), not raw Tables.
vantage-vista = "0.6.5"

# Async + HTTP server + CLI + (de)serialization
tokio = { version = "1.52", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
indexmap = "2"
clap = { version = "4.6", features = ["derive"] }
anyhow = "1"
rand = "0.8"
# `last_updated` timestamps stamped by the mission simulator.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Seeder fetches from lldev.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }

# Native Lambda runtime (the `lambda` feature). Speaks the Lambda Runtime API
# directly and runs an axum Router, so the deployed image needs no Lambda Web
# Adapter extension. http/hyper 1.x — matches axum 0.8.
lambda_http = { version = "1.2", optional = true, default-features = false, features = ["apigw_http"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
